@@ -1,3 +1,8 @@
+Wed Apr 15 17:10:54 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb: [BUG#49]用デバッグコード追加
+	* n-group-by.rb: start_watch_exportsのスレッドを終了するようにした.
+	
 Mon Apr 13 18:12:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port.rb: [BUG#49]用デバッグコード追加
